added svg files for skills icons and styling for skills section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="#team">Team</a>
+				<a class="nav-link js-scroll-trigger" href="#team">Skills</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -66,7 +66,7 @@
 	</header>
 
 	<!-- About Me (old: Services) -->
-	<section id="services">
+	<section id="services" class="bg-light">
 		<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
@@ -88,82 +88,76 @@
 	</section>
 
 	<!-- Portfolio Grid -->
-	<section class="" id="portfolio">
+	<section id="portfolio">
 		<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
 			<h2 class="section-heading text-uppercase">Portfolio</h2>
-			<h3 class="section-subheading text-muted">Check out some of the applications I've built.</h3>
+			<h3 class="section-subheading text-muted">Explore some of the applications I've built.</h3>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-4 col-sm-6 portfolio-item">
+			<div class="col-12 col-lg-4 portfolio-item">
 			<a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
 				<div class="portfolio-hover">
 				<div class="portfolio-hover-content">
 					<i class="fas fa-search fa-3x"></i>
 				</div>
 				</div>
-				<div class="my-project one">
-					<!-- <img class="img-fluid" src="img/portfolio/kronostory.png" alt="kronostory"> -->
-				</div>
+				<div class="my-project one"></div>
 			</a>
 			<div class="portfolio-caption">
 				<h4>KronoStory</h4>
 				<p class="text-muted">A platform for passion projects.</p>
 				<div class="my-icon-row">
-					<a href="#">
+					<a href="https://kronostory.com/" target="_blank">
 						<i class="fas fa-link"></i> Live
 					</a>
-					<a href="#">
+					<a href="https://github.com/jyang128">
 						<i class="fab fa-github"></i> GitHub
 					</a>
 				</div>	
 			</div>
 			</div>
-			<div class="col-md-4 col-sm-6 portfolio-item">
+			<div class="col-12 col-lg-4 portfolio-item">
 			<a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
 				<div class="portfolio-hover">
 				<div class="portfolio-hover-content">
 					<i class="fas fa-search fa-3x"></i>
 				</div>
 				</div>
-				<div class="my-project two">
-					<!-- <img class="img-fluid" src="img/portfolio/dozens.png" alt="dozens bakery"> -->
-				</div>
+				<div class="my-project two"></div>
 			</a>
 			<div class="portfolio-caption">
 				<h4>Dozen's Bakery</h4>
 				<p class="text-muted">An eCommerce shopping cart.</p>
 				<div class="my-icon-row">
-					<a href="#">
+					<a href="https://dozens.jessicakyang.com/" target="_blank">
 						<i class="fas fa-link"></i> Live
 					</a>
-					<a href="#">
+					<a href="https://github.com/jyang128">
 						<i class="fab fa-github"></i> GitHub
 					</a>
 				</div>	
 			</div>
 			</div>
-			<div class="col-md-4 col-sm-6 portfolio-item">
+			<div class="col-12 col-lg-4 portfolio-item">
 			<a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
 				<div class="portfolio-hover">
 				<div class="portfolio-hover-content">
 					<i class="fas fa-search fa-3x"></i>
 				</div>
 				</div>
-				<div class="my-project three">
-					<!-- <img class="img-fluid" src="img/portfolio/memory-match.png" alt="memory match"> -->
-				</div>
+				<div class="my-project three"></div>
 			</a>
 			<div class="portfolio-caption">
 				<h4>Calvin and Hobbes</h4>
 				<p class="text-muted">A memory match card game.</p>
 				<div class="my-icon-row">
-					<a href="#">
+					<a href="https://match.jessicakyang.com/" target="_blank">
 						<i class="fas fa-link"></i> Live
 					</a>
-					<a href="#">
+					<a href="https://github.com/jyang128">
 						<i class="fab fa-github"></i> GitHub
 					</a>
 				</div>	
@@ -173,120 +167,122 @@
 		</div>
 	</section>
 
-	<!-- Team -->
-	<section class="bg-light" id="team">
+	<!-- Skills -->
+	<section id="team" class="bg-light">
 		<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
-			<h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-			<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+			<h2 class="section-heading text-uppercase">Skills</h2>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-sm-4">
-			<div class="team-member">
-				<img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-				<h4>Kay Garland</h4>
-				<p class="text-muted">Lead Designer</p>
-				<ul class="list-inline social-buttons">
-				<li class="list-inline-item">
-					<a href="#">
-					<i class="fab fa-twitter"></i>
-					</a>
-				</li>
-				<li class="list-inline-item">
-					<a href="#">
-					<i class="fab fa-facebook-f"></i>
-					</a>
-				</li>
-				<li class="list-inline-item">
-					<a href="#">
-					<i class="fab fa-linkedin-in"></i>
-					</a>
-				</li>
-				</ul>
+		<div class="row my-skills-icon-row">
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/javascript.svg" alt="javascript">
+				</div>
+				<div class="text-center">JavaScript</div>
 			</div>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/react.svg" alt="react">
+				</div>
+				<div class="text-center">React.js</div>
 			</div>
-			<div class="col-sm-4">
-			<div class="team-member">
-				<img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-				<h4>Larry Parker</h4>
-				<p class="text-muted">Lead Marketer</p>
-				<ul class="list-inline social-buttons">
-				<li class="list-inline-item">
-					<a href="#">
-					<i class="fab fa-twitter"></i>
-					</a>
-				</li>
-				<li class="list-inline-item">
-					<a href="#">
-					<i class="fab fa-facebook-f"></i>
-					</a>
-				</li>
-				<li class="list-inline-item">
-					<a href="#">
-					<i class="fab fa-linkedin-in"></i>
-					</a>
-				</li>
-				</ul>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/html.svg" alt="html">
+				</div>
+				<div class="text-center">HTML5</div>
 			</div>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/css.svg" alt="css">
+				</div>
+				<div class="text-center">CSS3</div>
 			</div>
-			<div class="col-sm-4">
-			<div class="team-member">
-				<img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-				<h4>Diana Pertersen</h4>
-				<p class="text-muted">Lead Developer</p>
-				<ul class="list-inline social-buttons">
-				<li class="list-inline-item">
-					<a href="#">
-					<i class="fab fa-twitter"></i>
-					</a>
-				</li>
-				<li class="list-inline-item">
-					<a href="#">
-					<i class="fab fa-facebook-f"></i>
-					</a>
-				</li>
-				<li class="list-inline-item">
-					<a href="#">
-					<i class="fab fa-linkedin-in"></i>
-					</a>
-				</li>
-				</ul>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/bootstrap.svg" alt="bootstrap">
+				</div>
+				<div class="text-center">Bootstrap</div>
 			</div>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/git.svg" alt="git">
+				</div>
+				<div class="text-center">Git</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-8 mx-auto text-center">
-			<p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/github.svg" alt="github">
+				</div>
+				<div class="text-center">GitHub</div>
 			</div>
-		</div>
-		</div>
-	</section>
-
-	<!-- Clients -->
-	<section class="py-5">
-		<div class="container">
-		<div class="row">
-			<div class="col-md-3 col-sm-6">
-			<a href="#">
-				<img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
-			</a>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/php.svg" alt="php">
+				</div>
+				<div class="text-center">PHP</div>
 			</div>
-			<div class="col-md-3 col-sm-6">
-			<a href="#">
-				<img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
-			</a>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/node.svg" alt="node">
+				</div>
+				<div class="text-center">Node.js</div>
 			</div>
-			<div class="col-md-3 col-sm-6">
-			<a href="#">
-				<img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
-			</a>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/mysql.svg" alt="mysql">
+				</div>
+				<div class="text-center">MySQL</div>
 			</div>
-			<div class="col-md-3 col-sm-6">
-			<a href="#">
-				<img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
-			</a>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/aws.svg" alt="aws">
+				</div>
+				<div class="text-center">AWS Services</div>
+			</div>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/webpack.svg" alt="webpack">
+				</div>
+				<div class="text-center">Webpack</div>
+			</div>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/postman.svg" alt="postman">
+				</div>
+				<div class="text-center">Postman</div>
+			</div>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/chrome.svg" alt="chrome">
+				</div>
+				<div class="text-center">Chrome</div>
+			</div>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/jquery.svg" alt="jquery">
+				</div>
+				<div class="text-center">jQuery</div>
+			</div>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/ajax.svg" alt="ajax">
+				</div>
+				<div class="text-center">AJAX</div>
+			</div>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/vscode.svg" alt="vs code">
+				</div>
+				<div class="text-center">VS Code</div>
+			</div>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/photoshop.svg" alt="photoshop">
+				</div>
+				<div class="text-center">Photoshop</div>
 			</div>
 		</div>
 		</div>
@@ -297,8 +293,8 @@
 		<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
-			<h2 class="section-heading text-uppercase">Contact Us</h2>
-			<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+			<h2 class="section-heading text-uppercase">Contact Me</h2>
+			<h3 class="section-subheading text-muted">Want to discuss a project?</h3>
 			</div>
 		</div>
 		<div class="row">
@@ -341,37 +337,27 @@
 	<footer>
 		<div class="container">
 		<div class="row">
-			<div class="col-md-4">
-			<span class="copyright">Copyright &copy; Your Website 2018</span>
-			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 offset-md-4">
 			<ul class="list-inline social-buttons">
 				<li class="list-inline-item">
 				<a href="#">
-					<i class="fab fa-twitter"></i>
+					<i class="far fa-file"></i>
 				</a>
 				</li>
 				<li class="list-inline-item">
-				<a href="#">
-					<i class="fab fa-facebook-f"></i>
+				<a href="https://github.com/jyang128">
+					<i class="fab fa-github"></i>
 				</a>
 				</li>
 				<li class="list-inline-item">
-				<a href="#">
+				<a href="https://www.linkedin.com/in/jessicakyang" target="_blank">
 					<i class="fab fa-linkedin-in"></i>
 				</a>
 				</li>
 			</ul>
 			</div>
-			<div class="col-md-4">
-			<ul class="list-inline quicklinks">
-				<li class="list-inline-item">
-				<a href="#">Privacy Policy</a>
-				</li>
-				<li class="list-inline-item">
-				<a href="#">Terms of Use</a>
-				</li>
-			</ul>
+			<div class="col-md-4 offset-md-4 py-2">
+				<span class="copyright">Copyright &copy;2019 Jessica K. Yang</span>
 			</div>
 		</div>
 		</div>
