--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
-
+	<link rel="icon" type="image/png" href="img/about/sun.png" />
 	<title>Jessica K. Yang</title>
 
 	<!-- Bootstrap core CSS -->
@@ -38,7 +38,7 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav text-uppercase ml-auto">
 			<li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="#services">About Me</a>
+				<a class="nav-link js-scroll-trigger" href="#services">About</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
@@ -48,6 +48,12 @@
 			</li>
 			<li class="nav-item">
 				<a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#" target="_blank">Resume</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="https://github.com/jyang128" target="_blank">GitHub</a>
 			</li>
 			</ul>
 		</div>
@@ -60,7 +66,7 @@
 		<div class="intro-text">
 			<div class="intro-heading text-uppercase">Jessica K. Yang</div>
 			<div class="intro-lead-in">Web Developer</div>
-			<a class="btn btn-primary btn-lg js-scroll-trigger" href="#services">About Me</a>
+			<a class="js-scroll-trigger" href="#services"><i class="fas fa-chevron-circle-down fa-3x"></i></a>
 		</div>
 		</div>
 	</header>
@@ -113,7 +119,7 @@
 					<a href="https://kronostory.com/" target="_blank">
 						<i class="fas fa-link"></i> Live
 					</a>
-					<a href="https://github.com/jyang128">
+					<a href="https://github.com/jyang128" target="_blank">
 						<i class="fab fa-github"></i> GitHub
 					</a>
 				</div>	
@@ -135,7 +141,7 @@
 					<a href="https://dozens.jessicakyang.com/" target="_blank">
 						<i class="fas fa-link"></i> Live
 					</a>
-					<a href="https://github.com/jyang128">
+					<a href="https://github.com/jyang128/dozens-bakery" target="_blank">
 						<i class="fab fa-github"></i> GitHub
 					</a>
 				</div>	
@@ -157,7 +163,7 @@
 					<a href="https://match.jessicakyang.com/" target="_blank">
 						<i class="fas fa-link"></i> Live
 					</a>
-					<a href="https://github.com/jyang128">
+					<a href="https://github.com/jyang128/memory-match" target="_blank">
 						<i class="fab fa-github"></i> GitHub
 					</a>
 				</div>	
@@ -379,14 +385,13 @@
 				<div class="col-lg-8 mx-auto">
 				<div class="modal-body">
 					<!-- Project Details Go Here -->
-					<h2 class="text-uppercase">Project Name</h2>
-					<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-					<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-					<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+					<h2 class="text-uppercase">KronoStory</h2>
+					<p class="item-intro text-muted">A platform for passion projects.</p>
+					<img class="img-fluid d-block mx-auto" src="img/portfolio/kronostory.png" alt="kronostory">
+					<p>KronoStory is a community for finding and showcasing creative work and personal endeavors, featuring timelines that make it easy to see the whole process.</p>
 					<ul class="list-inline">
-					<li>Date: January 2017</li>
-					<li>Client: Threads</li>
-					<li>Category: Illustration</li>
+					<li>Role: Lead Front End Developer</li>
+					<li>Technology: React.js, Axios, HTML5/CSS3, Bootstrap 4, PHP, MySQL</li>
 					</ul>
 					<button class="btn btn-primary" data-dismiss="modal" type="button">
 					<i class="fas fa-times"></i>
@@ -413,14 +418,13 @@
 				<div class="col-lg-8 mx-auto">
 				<div class="modal-body">
 					<!-- Project Details Go Here -->
-					<h2 class="text-uppercase">Project Name</h2>
-					<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-					<img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
-					<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+					<h2 class="text-uppercase">Dozen's Bakery</h2>
+					<p class="item-intro text-muted">An online storefront for a bakery.</p>
+					<img class="img-fluid d-block mx-auto" src="img/portfolio/dozens.png" alt="dozens">
+					<p>Use this app to order desserts by the dozen from a fictional bakery. Visitors can browse the treats, update their shopping cart, and place an order.</p>
 					<ul class="list-inline">
-					<li>Date: January 2017</li>
-					<li>Client: Explore</li>
-					<li>Category: Graphic Design</li>
+					<li>Role: Solo Project</li>
+					<li>Technology: React.js, Fetch API, HTML5/CSS3, Bootstrap 4, PHP, MySQL</li>
 					</ul>
 					<button class="btn btn-primary" data-dismiss="modal" type="button">
 					<i class="fas fa-times"></i>
@@ -447,116 +451,13 @@
 				<div class="col-lg-8 mx-auto">
 				<div class="modal-body">
 					<!-- Project Details Go Here -->
-					<h2 class="text-uppercase">Project Name</h2>
-					<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-					<img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
-					<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+					<h2 class="text-uppercase">Memory Match</h2>
+					<p class="item-intro text-muted">A memory match game with <em>Calvin & Hobbes</em> theme.</p>
+					<img class="img-fluid d-block mx-auto" src="img/portfolio/memory-match.png" alt="memory match">
+					<p>Match all 9 pairs of cards to win, and track your performance along the way.</p>
 					<ul class="list-inline">
-					<li>Date: January 2017</li>
-					<li>Client: Finish</li>
-					<li>Category: Identity</li>
-					</ul>
-					<button class="btn btn-primary" data-dismiss="modal" type="button">
-					<i class="fas fa-times"></i>
-					Close Project</button>
-				</div>
-				</div>
-			</div>
-			</div>
-		</div>
-		</div>
-	</div>
-
-	<!-- Modal 4 -->
-	<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
-		<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="close-modal" data-dismiss="modal">
-			<div class="lr">
-				<div class="rl"></div>
-			</div>
-			</div>
-			<div class="container">
-			<div class="row">
-				<div class="col-lg-8 mx-auto">
-				<div class="modal-body">
-					<!-- Project Details Go Here -->
-					<h2 class="text-uppercase">Project Name</h2>
-					<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-					<img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
-					<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-					<ul class="list-inline">
-					<li>Date: January 2017</li>
-					<li>Client: Lines</li>
-					<li>Category: Branding</li>
-					</ul>
-					<button class="btn btn-primary" data-dismiss="modal" type="button">
-					<i class="fas fa-times"></i>
-					Close Project</button>
-				</div>
-				</div>
-			</div>
-			</div>
-		</div>
-		</div>
-	</div>
-
-	<!-- Modal 5 -->
-	<div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-		<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="close-modal" data-dismiss="modal">
-			<div class="lr">
-				<div class="rl"></div>
-			</div>
-			</div>
-			<div class="container">
-			<div class="row">
-				<div class="col-lg-8 mx-auto">
-				<div class="modal-body">
-					<!-- Project Details Go Here -->
-					<h2 class="text-uppercase">Project Name</h2>
-					<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-					<img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-					<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-					<ul class="list-inline">
-					<li>Date: January 2017</li>
-					<li>Client: Southwest</li>
-					<li>Category: Website Design</li>
-					</ul>
-					<button class="btn btn-primary" data-dismiss="modal" type="button">
-					<i class="fas fa-times"></i>
-					Close Project</button>
-				</div>
-				</div>
-			</div>
-			</div>
-		</div>
-		</div>
-	</div>
-
-	<!-- Modal 6 -->
-	<div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-		<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="close-modal" data-dismiss="modal">
-			<div class="lr">
-				<div class="rl"></div>
-			</div>
-			</div>
-			<div class="container">
-			<div class="row">
-				<div class="col-lg-8 mx-auto">
-				<div class="modal-body">
-					<!-- Project Details Go Here -->
-					<h2 class="text-uppercase">Project Name</h2>
-					<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-					<img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
-					<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-					<ul class="list-inline">
-					<li>Date: January 2017</li>
-					<li>Client: Window</li>
-					<li>Category: Photography</li>
+					<li>Role: Solo Project</li>
+					<li>Technology: HTML5/CSS3, jQuery</li>
 					</ul>
 					<button class="btn btn-primary" data-dismiss="modal" type="button">
 					<i class="fas fa-times"></i>
