added links to public repos

--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
 			</div>
 			<div class="col-md-2 col-6">
 				<div class="my-skills-icons">
-					<img src="img/skills/chrome.svg" alt="chrome">
+					<img src="img/skills/chrome.svg" alt="chrome dev tools">
 				</div>
-				<div class="text-center">Chrome</div>
+				<div class="text-center">Chrome Dev Tool</div>
 			</div>
 			<div class="col-md-2 col-6">
 				<div class="my-skills-icons">
@@ -387,6 +387,14 @@
 					<!-- Project Details Go Here -->
 					<h2 class="text-uppercase">KronoStory</h2>
 					<p class="item-intro text-muted">A platform for passion projects.</p>
+					<div class="my-icon-row">
+						<a href="https://kronostory.com" target="_blank">
+							<i class="fas fa-link"></i> Live
+						</a>
+						<a href="#" target="_blank">
+							<i class="fab fa-github"></i> GitHub
+						</a>
+					</div>
 					<img class="img-fluid d-block mx-auto" src="img/portfolio/kronostory.png" alt="kronostory">
 					<p>KronoStory is a community for finding and showcasing creative work and personal endeavors, featuring timelines that make it easy to see the whole process.</p>
 					<ul class="list-inline">
@@ -420,6 +428,14 @@
 					<!-- Project Details Go Here -->
 					<h2 class="text-uppercase">Dozen's Bakery</h2>
 					<p class="item-intro text-muted">An online storefront for a bakery.</p>
+					<div class="my-icon-row">
+						<a href="https://dozens.jessicakyang.com/" target="_blank">
+							<i class="fas fa-link"></i> Live
+						</a>
+						<a href="https://github.com/jyang128/dozens-bakery" target="_blank">
+							<i class="fab fa-github"></i> GitHub
+						</a>
+					</div>
 					<img class="img-fluid d-block mx-auto" src="img/portfolio/dozens.png" alt="dozens">
 					<p>Use this app to order desserts by the dozen from a fictional bakery. Visitors can browse the treats, update their shopping cart, and place an order.</p>
 					<ul class="list-inline">
@@ -453,6 +469,14 @@
 					<!-- Project Details Go Here -->
 					<h2 class="text-uppercase">Memory Match</h2>
 					<p class="item-intro text-muted">A memory match game with <em>Calvin & Hobbes</em> theme.</p>
+					<div class="my-icon-row">
+						<a href="https://match.jessicakyang.com/" target="_blank">
+							<i class="fas fa-link"></i> Live
+						</a>
+						<a href="https://github.com/jyang128/memory-match" target="_blank">
+							<i class="fab fa-github"></i> GitHub
+						</a>
+					</div>
 					<img class="img-fluid d-block mx-auto" src="img/portfolio/memory-match.png" alt="memory match">
 					<p>Match all 9 pairs of cards to win, and track your performance along the way.</p>
 					<ul class="list-inline">
