--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 	<!-- Header -->
 	<header class="masthead">
 		<div class="container">
-		<div class="intro-text">
+			<div class="intro-text">
 			<div class="intro-heading text-uppercase">Jessica K. Yang</div>
 			<div class="intro-lead-in">Web Developer</div>
 			<a class="js-scroll-trigger" href="#services"><i class="fas fa-chevron-circle-down fa-3x"></i></a>
-		</div>
+			</div>
 		</div>
 	</header>
 
@@ -86,8 +86,8 @@
 				</div>
 			</div>
 			<div class="col-md-8">
-				<!-- <h4 class="service-heading">Responsive Design</h4> -->
-				<p class="text-muted my-story">After getting my degree from Northwestern, I joined a small in-house digital marketing team and gained experience around managing content on eCommerce websites, analyzing data from site traffic, and deploying email marketing.<br/><br>When this role led to an opportunity to begin applying HTML and CSS to build landing pages, I became hungry to learn more about coding and web development.<br/><br/>I am excited to dive into my new career and continue this momentum of learning and growing each day!<br/><br/><i class="fas fa-map-pin"></i> Orange County, CA<br/><i class="fas fa-envelope"></i>&nbsp;&nbsp;jessicayang128@gmail.com</p>
+				<p class="text-muted my-story">After getting my degree from Northwestern, I joined a small in-house digital marketing team and gained experience around managing content on eCommerce websites, analyzing data from site traffic, and deploying email marketing.<br/><br>When this role led to an opportunity to begin applying HTML and CSS to build landing pages, I became hungry to learn more about coding and web development.<br/><br/>I am excited to dive into my new career and continue this momentum of learning and growing each day!<br/><br/>Orange County, CA<br/>
+					<a href="mailto:jessicayang128@gmail.com">jessicayang128@gmail.com</a></p>
 			</div>
 		</div>
 		</div>
@@ -178,7 +178,7 @@
 		<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
-			<h2 class="section-heading text-uppercase">Skills</h2>
+			<h2 class="section-heading text-uppercase">Tech Skills</h2>
 			</div>
 		</div>
 		<div class="row my-skills-icon-row">
@@ -264,7 +264,7 @@
 				<div class="my-skills-icons">
 					<img src="img/skills/chrome.svg" alt="chrome dev tools">
 				</div>
-				<div class="text-center">Chrome Dev Tool</div>
+				<div class="text-center">Chrome Dev Tools</div>
 			</div>
 			<div class="col-md-2 col-6">
 				<div class="my-skills-icons">
@@ -300,40 +300,20 @@
 		<div class="row">
 			<div class="col-lg-12 text-center">
 			<h2 class="section-heading text-uppercase">Contact Me</h2>
-			<h3 class="section-subheading text-muted">Want to discuss a project?</h3>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
-			<form id="contactForm" name="sentMessage" novalidate="novalidate">
 				<div class="row">
-				<div class="col-md-6">
-					<div class="form-group">
-					<input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
-					<p class="help-block text-danger"></p>
-					</div>
-					<div class="form-group">
-					<input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
-					<p class="help-block text-danger"></p>
-					</div>
-					<div class="form-group">
-					<input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
-					<p class="help-block text-danger"></p>
+					<div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 my-contact-info text-center" >
+						<div class="contact-icon"><i class="fas fa-map-marker-alt"></i>  <strong>Location:</strong></div>
+						<div>Orange County, CA</div>
+					</div>	
+					<div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 my-contact-info text-center" >
+							<div class="contact-icon"><i class="fas fa-envelope"></i>  <strong>Email Me:</strong></div>
+						<div><a href="mailto:jessicayang128@gmail.com">jessicayang128@gmail.com</a></div>
 					</div>
 				</div>
-				<div class="col-md-6">
-					<div class="form-group">
-					<textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
-					<p class="help-block text-danger"></p>
-					</div>
-				</div>
-				<div class="clearfix"></div>
-				<div class="col-lg-12 text-center">
-					<div id="success"></div>
-					<button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
-				</div>
-				</div>
-			</form>
 			</div>
 		</div>
 		</div>
@@ -363,7 +343,7 @@
 			</ul>
 			</div>
 			<div class="col-md-4 offset-md-4 py-2">
-				<span class="copyright">Copyright &copy;2019 Jessica K. Yang</span>
+				<span class="copyright">Copyright &copy;2019 jessicakyang.com</span>
 			</div>
 		</div>
 		</div>
@@ -399,7 +379,7 @@
 					<p>KronoStory is a community for finding and showcasing creative work and personal endeavors, featuring timelines that make it easy to see the whole process.</p>
 					<ul class="list-inline">
 					<li>Role: Lead Front End Developer</li>
-					<li>Technology: React.js, Axios, HTML5/CSS3, Bootstrap 4, PHP, MySQL</li>
+					<li>Technology: React.js, Axios, React Router, HTML5/CSS3, Bootstrap 4, PHP, MySQL</li>
 					</ul>
 					<button class="btn btn-primary" data-dismiss="modal" type="button">
 					<i class="fas fa-times"></i>
@@ -427,7 +407,7 @@
 				<div class="modal-body">
 					<!-- Project Details Go Here -->
 					<h2 class="text-uppercase">Dozen's Bakery</h2>
-					<p class="item-intro text-muted">An online storefront for a bakery.</p>
+					<p class="item-intro text-muted">An online storefront for a bakery (demo only).</p>
 					<div class="my-icon-row">
 						<a href="https://dozens.jessicakyang.com/" target="_blank">
 							<i class="fas fa-link"></i> Live
@@ -439,8 +419,8 @@
 					<img class="img-fluid d-block mx-auto" src="img/portfolio/dozens.png" alt="dozens">
 					<p>Use this app to order desserts by the dozen from a fictional bakery. Visitors can browse the treats, update their shopping cart, and place an order.</p>
 					<ul class="list-inline">
-					<li>Role: Solo Project</li>
-					<li>Technology: React.js, Fetch API, HTML5/CSS3, Bootstrap 4, PHP, MySQL</li>
+					<li>Solo Project</li>
+					<li>Technology: React.js, Fetch API, React Router, HTML5/CSS3, Bootstrap 4, PHP, MySQL</li>
 					</ul>
 					<button class="btn btn-primary" data-dismiss="modal" type="button">
 					<i class="fas fa-times"></i>
@@ -480,7 +460,7 @@
 					<img class="img-fluid d-block mx-auto" src="img/portfolio/memory-match.png" alt="memory match">
 					<p>Match all 9 pairs of cards to win, and track your performance along the way.</p>
 					<ul class="list-inline">
-					<li>Role: Solo Project</li>
+					<li>Solo Project</li>
 					<li>Technology: HTML5/CSS3, jQuery</li>
 					</ul>
 					<button class="btn btn-primary" data-dismiss="modal" type="button">
