updated content in about me section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="icon" type="image/png" href="img/about/sun.png" />
-	<title>Jessica K. Yang</title>
+	<title>Jessica K. Yang | Web Developer</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -86,7 +86,7 @@
 				</div>
 			</div>
 			<div class="col-md-8">
-				<p class="text-muted my-story">After getting my degree from Northwestern, I joined a small in-house digital marketing team and gained experience around managing content on eCommerce websites, analyzing data from site traffic, and deploying email marketing.<br/><br>When this role led to an opportunity to begin applying HTML and CSS to build landing pages, I became hungry to learn more about coding and web development.<br/><br/>I am excited to dive into my new career and continue this momentum of learning and growing each day!<br/><br/>Orange County, CA<br/>
+				<p class="text-muted my-story">My career began on a digital marketing team, where I gained experience around managing content on eCommerce websites, analyzing data from site traffic, and deploying email marketing.  There, I had the opportunity to begin applying HTML and CSS to assemble landing pages, and I became hungry to learn more about coding and web development in my spare time.<br/><br/>These early days of pursuing online tutorials, embracing trial & error, and rejoicing upon seeing code come to life on my screen led to my decision to pivot into full time web development. Every day is exciting, as I am advancing my skillset, training my problem solving skills, and growing in excellence as a developer.<br/><br/>As someone who is highly organized, detail-oriented, and teachable, I am excited to find a company to partner with as I continue to learn and grow each day.<br/><br/>Orange County, CA<br/>
 					<a href="mailto:jessicayang128@gmail.com">jessicayang128@gmail.com</a></p>
 			</div>
 		</div>
@@ -326,12 +326,12 @@
 			<div class="col-md-4 offset-md-4">
 			<ul class="list-inline social-buttons">
 				<li class="list-inline-item">
-				<a href="#">
+				<a href="#" target="_blank">
 					<i class="far fa-file"></i>
 				</a>
 				</li>
 				<li class="list-inline-item">
-				<a href="https://github.com/jyang128">
+				<a href="https://github.com/jyang128" target="_blank">
 					<i class="fab fa-github"></i>
 				</a>
 				</li>
