added resume pdf

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#" target="_blank">Resume</a>
+				<a class="nav-link" href="./jessicakyang.pdf" target="_blank">Resume</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="https://github.com/jyang128" target="_blank">GitHub</a>
@@ -119,7 +119,7 @@
 					<a href="https://kronostory.com/" target="_blank">
 						<i class="fas fa-link"></i> Live
 					</a>
-					<a href="https://github.com/jyang128" target="_blank">
+					<a href="https://github.com/Learning-Fuze/c319_DIYblogging_tracker" target="_blank">
 						<i class="fab fa-github"></i> GitHub
 					</a>
 				</div>	
@@ -326,7 +326,7 @@
 			<div class="col-md-4 offset-md-4">
 			<ul class="list-inline social-buttons">
 				<li class="list-inline-item">
-				<a href="#" target="_blank">
+				<a href="./jessicakyang.pdf" target="_blank">
 					<i class="far fa-file"></i>
 				</a>
 				</li>
@@ -371,7 +371,7 @@
 						<a href="https://kronostory.com" target="_blank">
 							<i class="fas fa-link"></i> Live
 						</a>
-						<a href="#" target="_blank">
+						<a href="https://github.com/Learning-Fuze/c319_DIYblogging_tracker" target="_blank">
 							<i class="fab fa-github"></i> GitHub
 						</a>
 					</div>
