--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
 	<!-- Custom styles for this template -->
-	<link href="css/agency.css" rel="stylesheet">
+	<link href="css/styles.css" rel="stylesheet">
 
 	</head>
 
@@ -157,7 +157,7 @@
 				<div class="my-project three"></div>
 			</a>
 			<div class="portfolio-caption">
-				<h4>Calvin and Hobbes</h4>
+				<h4>Dynamic Duo</h4>
 				<p class="text-muted">A memory match card game.</p>
 				<div class="my-icon-row">
 					<a href="https://match.jessicakyang.com/" target="_blank">
@@ -342,7 +342,7 @@
 				</li>
 			</ul>
 			</div>
-			<div class="col-md-4 offset-md-4 py-2">
+			<div class="col-md-8 offset-md-2 py-2">
 				<span class="copyright">Copyright &copy;2019 jessicakyang.com</span>
 			</div>
 		</div>
@@ -447,7 +447,7 @@
 				<div class="col-lg-8 mx-auto">
 				<div class="modal-body">
 					<!-- Project Details Go Here -->
-					<h2 class="text-uppercase">Memory Match</h2>
+					<h2 class="text-uppercase">Dynamic Duo</h2>
 					<p class="item-intro text-muted">A memory match game with <em>Calvin & Hobbes</em> theme.</p>
 					<div class="my-icon-row">
 						<a href="https://match.jessicakyang.com/" target="_blank">
