added new portfolio images, fixed minor spacing and font size issue for mobile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<link rel="icon" type="image/png" href="img/about/sun.png" />
+	<link rel="icon" type="image/png" href="img/about/leaf.png" />
 	<title>Jessica K. Yang | Web Developer</title>
 
 	<!-- Bootstrap core CSS -->
@@ -303,7 +303,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-12">
+			<div class="col-lg-12 contact-card-container">
 				<div class="row">
 					<div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 my-contact-info text-center" >
 						<div class="contact-icon"><i class="fas fa-map-marker-alt"></i>  <strong>Location:</strong></div>
@@ -417,7 +417,7 @@
 						</a>
 					</div>
 					<img class="img-fluid d-block mx-auto" src="img/portfolio/dozens.png" alt="dozens">
-					<p>Use this app to order desserts by the dozen from a fictional bakery. Visitors can browse the treats, update their shopping cart, and place an order.</p>
+					<p>Use this app to order desserts by the dozen from a bakery. Visitors can browse the treats, update their shopping cart, and place an order.</p>
 					<ul class="list-inline">
 					<li>Solo Project</li>
 					<li>Technology: React.js, Fetch API, React Router, HTML5/CSS3, Bootstrap 4, PHP, MySQL</li>
@@ -448,7 +448,7 @@
 				<div class="modal-body">
 					<!-- Project Details Go Here -->
 					<h2 class="text-uppercase">Dynamic Duo</h2>
-					<p class="item-intro text-muted">A memory match game with <em>Calvin & Hobbes</em> theme.</p>
+					<p class="item-intro text-muted">A memory match game with Calvin & Hobbes theme.</p>
 					<div class="my-icon-row">
 						<a href="https://match.jessicakyang.com/" target="_blank">
 							<i class="fas fa-link"></i> Live
@@ -458,7 +458,7 @@
 						</a>
 					</div>
 					<img class="img-fluid d-block mx-auto" src="img/portfolio/memory-match.png" alt="memory match">
-					<p>Match all 9 pairs of cards to win, and track your performance along the way.</p>
+					<p>Match all 9 pairs of cards to win, and track your stats along the way.</p>
 					<ul class="list-inline">
 					<li>Solo Project</li>
 					<li>Technology: HTML5/CSS3, jQuery</li>
