--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 							<i class="fab fa-github"></i> GitHub
 						</a>
 					</div>
-					<img class="img-fluid d-block mx-auto" src="img/portfolio/kronostory.png" alt="kronostory">
+					<img class="img-fluid d-block mx-auto" src="img/portfolio/kronostory-home.png" alt="kronostory">
 					<p>KronoStory is a community for finding and showcasing creative work and personal endeavors, featuring timelines that make it easy to see the whole process.</p>
 					<ul class="list-inline">
 					<li>Role: Lead Front End Developer</li>
@@ -457,7 +457,7 @@
 							<i class="fab fa-github"></i> GitHub
 						</a>
 					</div>
-					<img class="img-fluid d-block mx-auto" src="img/portfolio/memory-match.png" alt="memory match">
+					<img class="img-fluid d-block mx-auto" src="img/portfolio/match.png" alt="memory match">
 					<p>Match all 9 pairs of cards to win, and track your stats along the way.</p>
 					<ul class="list-inline">
 					<li>Solo Project</li>
@@ -480,10 +480,6 @@
 
 	<!-- Plugin JavaScript -->
 	<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-	<!-- Contact form JavaScript -->
-	<script src="js/jqBootstrapValidation.js"></script>
-	<script src="js/contact_me.js"></script>
 
 	<!-- Custom scripts for this template -->
 	<script src="js/agency.min.js"></script>
