updated descriptions for projects

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		<div class="row">
 			<div class="col-lg-12 text-center">
 			<h2 class="section-heading text-uppercase">Portfolio</h2>
-			<h3 class="section-subheading text-muted">Explore some of the applications I've built.</h3>
+			<h3 class="section-subheading text-muted">Click the images to explore some of my work.</h3>
 			</div>
 		</div>
 		<div class="row">
@@ -173,7 +173,7 @@
 		</div>
 	</section>
 
-	<!-- Skills -->
+	<!-- Skills (old: Team) -->
 	<section id="team" class="bg-light">
 		<div class="container">
 		<div class="row">
@@ -379,7 +379,7 @@
 					<p>KronoStory is a community for finding and showcasing creative work and personal endeavors, featuring timelines that make it easy to see the whole process.</p>
 					<ul class="list-inline">
 					<li>Role: Lead Front End Developer</li>
-					<li>Technology: React.js, Axios, React Router, HTML5/CSS3, Bootstrap 4, PHP, MySQL</li>
+					<li>Technology: JavaScript, React.js, Axios, React Router, HTML5/CSS3, Bootstrap 4, PHP, MySQL</li>
 					</ul>
 					<button class="btn btn-primary" data-dismiss="modal" type="button">
 					<i class="fas fa-times"></i>
@@ -417,10 +417,10 @@
 						</a>
 					</div>
 					<img class="img-fluid d-block mx-auto" src="img/portfolio/dozens.png" alt="dozens">
-					<p>Use this app to order desserts by the dozen from a bakery. Visitors can browse the treats, update their shopping cart, and place an order.</p>
+					<p>An online storefront for a bakery that sells treats by the dozen. Visitors can browse the site, add and remove treats from their cart, place an order, and view their confirmation/order summary.</p>
 					<ul class="list-inline">
 					<li>Solo Project</li>
-					<li>Technology: React.js, Fetch API, React Router, HTML5/CSS3, Bootstrap 4, PHP, MySQL</li>
+					<li>Technology: JavaScript, React.js, Fetch API, React Router, HTML5/CSS3, Bootstrap 4, PHP, MySQL</li>
 					</ul>
 					<button class="btn btn-primary" data-dismiss="modal" type="button">
 					<i class="fas fa-times"></i>
@@ -458,10 +458,10 @@
 						</a>
 					</div>
 					<img class="img-fluid d-block mx-auto" src="img/portfolio/match.png" alt="memory match">
-					<p>Match all 9 pairs of cards to win, and track your stats along the way.</p>
+					<p>A themed memory match card game with 18 randomized face-down cards. Click to flip cards and execute logic to check for matches and mismatches. Match all 9 pairs to win, and track your stats along the way.</p>
 					<ul class="list-inline">
 					<li>Solo Project</li>
-					<li>Technology: HTML5/CSS3, jQuery</li>
+					<li>Technology: JavaScript, jQuery, HTML5/CSS3</li>
 					</ul>
 					<button class="btn btn-primary" data-dismiss="modal" type="button">
 					<i class="fas fa-times"></i>
