--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				</div>
 			</div>
 			<div class="col-md-8">
-				<p class="text-muted my-story">My career began on a digital marketing team, where I gained experience around managing content on eCommerce websites, analyzing data from site traffic, and deploying email marketing.  There, I had the opportunity to begin applying HTML and CSS to assemble landing pages, and I became hungry to learn more about coding and web development in my spare time.<br/><br/>These early days of pursuing online tutorials, embracing trial & error, and rejoicing upon seeing code come to life on my screen led to my decision to pivot into full time web development. Every day is exciting, as I am advancing my skillset, training my problem solving skills, and growing in excellence as a developer.<br/><br/>As someone who is highly organized, detail-oriented, and teachable, I am excited to find a company to partner with as I continue to learn and grow each day.<br/><br/>Orange County, CA<br/>
+				<p class="text-muted my-story">My career began on a digital marketing team, where I gained experience around managing content on eCommerce websites, analyzing data from site traffic, and deploying email marketing.  There, I had the opportunity to begin applying HTML and CSS to assemble landing pages, and I became hungry to learn more about coding and web development in my spare time.<br/><br/>These early days of pursuing online tutorials, embracing trial & error, and rejoicing upon seeing code come to life on my screen inspired me to pivot into full time web development.  Since then, I have immersed myself in new languages, persevered for those ah-ha! moments, and expanded my problem solving intuition day by day.<br/><br/>In learning to code, I have also benefitted from being highly organized, detail-oriented, and teachable&mdash;a great combo for a career path full of learning and rapid change!<br/><br/>Orange County, CA<br/>
 					<a href="mailto:jessicayang128@gmail.com">jessicayang128@gmail.com</a></p>
 			</div>
 		</div>
@@ -119,7 +119,7 @@
 					<a href="https://kronostory.com/" target="_blank">
 						<i class="fas fa-link"></i> Live
 					</a>
-					<a href="https://github.com/Learning-Fuze/c319_DIYblogging_tracker" target="_blank">
+					<a href="https://github.com/jyang128/kronostory" target="_blank">
 						<i class="fab fa-github"></i> GitHub
 					</a>
 				</div>	
@@ -306,12 +306,13 @@
 			<div class="col-lg-12 contact-card-container">
 				<div class="row">
 					<div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 my-contact-info text-center" >
+						<div class="contact-icon"><i class="fas fa-envelope"></i>  <strong>Email:</strong></div>
+						<div><a href="mailto:jessicayang128@gmail.com">jessicayang128@gmail.com</a>
+						</div>
+					</div>
+					<div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 my-contact-info text-center" >
 						<div class="contact-icon"><i class="fas fa-map-marker-alt"></i>  <strong>Location:</strong></div>
 						<div>Orange County, CA</div>
-					</div>	
-					<div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 my-contact-info text-center" >
-							<div class="contact-icon"><i class="fas fa-envelope"></i>  <strong>Email Me:</strong></div>
-						<div><a href="mailto:jessicayang128@gmail.com">jessicayang128@gmail.com</a></div>
 					</div>
 				</div>
 			</div>
@@ -371,7 +372,7 @@
 						<a href="https://kronostory.com" target="_blank">
 							<i class="fas fa-link"></i> Live
 						</a>
-						<a href="https://github.com/Learning-Fuze/c319_DIYblogging_tracker" target="_blank">
+						<a href="https://github.com/jyang128/kronostory" target="_blank">
 							<i class="fab fa-github"></i> GitHub
 						</a>
 					</div>
