--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="./jessicakyang.pdf" target="_blank">Resume</a>
+				<a class="nav-link" href="./jessica-k-yang.pdf" target="_blank">Resume</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="https://github.com/jyang128" target="_blank">GitHub</a>
@@ -86,7 +86,7 @@
 				</div>
 			</div>
 			<div class="col-md-8">
-				<p class="text-muted my-story">My career began on a digital marketing team, where I gained experience around managing content on eCommerce websites, analyzing data from site traffic, and deploying email marketing.  There, I had the opportunity to begin applying HTML and CSS to assemble landing pages, and I became hungry to learn more about coding and web development in my spare time.<br/><br/>These early days of pursuing online tutorials, embracing trial & error, and rejoicing upon seeing code come to life on my screen inspired me to pivot into full time web development.  Since then, I have immersed myself in new languages, persevered for those ah-ha! moments, and expanded my problem solving intuition day by day.<br/><br/>In learning to code, I have also benefitted from being highly organized, detail-oriented, and teachable&mdash;a great combo for a career path full of learning and rapid change!<br/><br/>Orange County, CA<br/>
+				<p class="text-muted my-story">My career began on a digital marketing team, where I gained experience around managing content on eCommerce websites, analyzing data from site traffic, and deploying email marketing.  There, I had the opportunity to begin applying HTML and CSS to assemble landing pages, and I became hungry to learn more about coding and web development in my spare time.<br/><br/>These early days of pursuing online tutorials, embracing trial & error, and rejoicing upon seeing code come to life on my screen inspired me to pivot into full time web development.  Since then, I have immersed myself in new languages, persevered for those ah-ha! moments, and expanded my problem solving intuition day by day.<br/><br/>My goal is to continue learning and growing with each new opportunity&mdash;so let's build something together!<br/><br/>Orange County, CA<br/>
 					<a href="mailto:jessicayang128@gmail.com">jessicayang128@gmail.com</a></p>
 			</div>
 		</div>
@@ -119,7 +119,7 @@
 					<a href="https://kronostory.com/" target="_blank">
 						<i class="fas fa-link"></i> Live
 					</a>
-					<a href="https://github.com/jyang128/kronostory" target="_blank">
+					<a href="https://github.com/Learning-Fuze/c319_DIYblogging_tracker" target="_blank">
 						<i class="fab fa-github"></i> GitHub
 					</a>
 				</div>	
@@ -163,7 +163,7 @@
 					<a href="https://match.jessicakyang.com/" target="_blank">
 						<i class="fas fa-link"></i> Live
 					</a>
-					<a href="https://github.com/jyang128/memory-match" target="_blank">
+					<a href="https://github.com/jyang128/dynamic-duo" target="_blank">
 						<i class="fab fa-github"></i> GitHub
 					</a>
 				</div>	
@@ -327,7 +327,7 @@
 			<div class="col-md-4 offset-md-4">
 			<ul class="list-inline social-buttons">
 				<li class="list-inline-item">
-				<a href="./jessicakyang.pdf" target="_blank">
+				<a href="./jessica-k-yang.pdf" target="_blank">
 					<i class="far fa-file"></i>
 				</a>
 				</li>
@@ -372,7 +372,7 @@
 						<a href="https://kronostory.com" target="_blank">
 							<i class="fas fa-link"></i> Live
 						</a>
-						<a href="https://github.com/jyang128/kronostory" target="_blank">
+						<a href="https://github.com/Learning-Fuze/c319_DIYblogging_tracker" target="_blank">
 							<i class="fab fa-github"></i> GitHub
 						</a>
 					</div>
@@ -454,7 +454,7 @@
 						<a href="https://match.jessicakyang.com/" target="_blank">
 							<i class="fas fa-link"></i> Live
 						</a>
-						<a href="https://github.com/jyang128/memory-match" target="_blank">
+						<a href="https://github.com/jyang128/dynamic-duo" target="_blank">
 							<i class="fab fa-github"></i> GitHub
 						</a>
 					</div>
