added updated resume and project screenshot

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 							<i class="fab fa-github"></i> GitHub
 						</a>
 					</div>
-					<img class="img-fluid d-block mx-auto" src="img/portfolio/dozens.png" alt="dozens">
+					<img class="img-fluid d-block mx-auto" src="img/portfolio/dozens-bakery.png" alt="dozens">
 					<p>An online storefront for a bakery that sells treats by the dozen. Visitors can browse the site, add and remove treats from their cart, place an order, and view their confirmation/order summary.</p>
 					<ul class="list-inline">
 					<li>Solo Project</li>
@@ -459,7 +459,7 @@
 						</a>
 					</div>
 					<img class="img-fluid d-block mx-auto" src="img/portfolio/match.png" alt="memory match">
-					<p>A themed memory match card game with 18 randomized face-down cards. Click to flip cards and execute logic to check for matches and mismatches. Match all 9 pairs to win, and track your stats along the way.</p>
+					<p>A memory match card game with 18 randomized face-down cards. Click to flip cards and execute logic to check for matches and mismatches. Match all 9 pairs to win, and track your stats along the way.</p>
 					<ul class="list-inline">
 					<li>Solo Project</li>
 					<li>Technology: JavaScript, jQuery, HTML5/CSS3</li>
