moved resume link into hero button, added icon next to github in menu

--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
 				<a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="./jessica-k-yang.pdf" target="_blank">Resume</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="https://github.com/jyang128" target="_blank">GitHub</a>
+				<a class="nav-link" href="https://github.com/jyang128" target="_blank">GitHub <i class="fas fa-external-link-alt"></i></a>
 			</li>
 			</ul>
 		</div>
@@ -66,7 +63,9 @@
 			<div class="intro-text">
 			<div class="intro-heading text-uppercase">Jessica K. Yang</div>
 			<div class="intro-lead-in">Web Developer</div>
-			<a class="js-scroll-trigger" href="#services"><i class="fas fa-chevron-circle-down fa-3x"></i></a>
+			<div class="intro-cta">
+					<a class="nav-link" href="./jessica-k-yang.pdf" target="_blank"><button class="btn-intro">RESUME</button></a>
+			</div>
 			</div>
 		</div>
 	</header>
@@ -377,10 +376,10 @@
 						</a>
 					</div>
 					<img class="img-fluid d-block mx-auto" src="img/portfolio/kronostory-home.png" alt="kronostory">
-					<p>KronoStory is a community for finding and showcasing creative work and personal endeavors, featuring timelines that make it easy to see the whole process.</p>
+					<p>KronoStory is a community platform for finding and showcasing creative work and personal endeavors, featuring timelines that make it easy to see the whole process.</p>
 					<ul class="list-inline">
 					<li>Role: Lead Front End Developer</li>
-					<li>Technology: JavaScript, React.js, Axios, React Router, HTML5/CSS3, Bootstrap 4, PHP, MySQL</li>
+					<li>Technology: JavaScript, React.js, Axios, React Router, HTML5/CSS3, Bootstrap 4, PHP, MySQL, AWS</li>
 					</ul>
 					<button class="btn btn-primary" data-dismiss="modal" type="button">
 					<i class="fas fa-times"></i>
