--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 			</div>
 			<div class="container">
 			<div class="row">
-				<div class="col-lg-8 mx-auto">
+				<div class="col-lg-10 mx-auto">
 				<div class="modal-body">
 					<!-- Project Details Go Here -->
 					<h2 class="text-uppercase">KronoStory</h2>
@@ -376,11 +376,14 @@
 						</a>
 					</div>
 					<img class="img-fluid d-block mx-auto" src="img/portfolio/kronostory-home.png" alt="kronostory">
-					<p>KronoStory is a community platform for finding and showcasing creative work and personal endeavors, featuring timelines that make it easy to see the whole process.</p>
-					<ul class="list-inline">
-					<li>Role: Lead Front End Developer</li>
-					<li>Technology: JavaScript, React.js, Axios, React Router, HTML5/CSS3, Bootstrap 4, PHP, MySQL, AWS</li>
-					</ul>
+					<div class="project-overview">
+						<h5>Overview</h5>
+						<p>KronoStory is a community platform for finding and showcasing creative work and personal endeavors, featuring timelines that make it easy to see the whole process. Users can sign up and log in to share their projects. They can add text and images, update their projects, and delete their content. Visitors to the site can filter content by categories and view user profiles.</p>
+					</div>
+					<div class="technical-details">
+						<h5>Technical Details</h5>
+						<p>Utilized <strong>JavaScript</strong> with <strong>React.js</strong> to build the appication's front end UI. Also learned <strong>React Router</strong> and <strong>Axios</strong> to ensure proper page routing and to send/retrieve data from endpoints. Back-end built with <strong>PHP</strong> to make queries that create entries in a <strong>MySQL</strong> database. Project features custom <strong>CSS3</strong> and <strong>Bootstrap 4</strong> for a responsive layout.  All code, data, and user-generated content are hosted on an <strong>AWS EC2</strong> server.</p>
+					</div>
 					<button class="btn btn-primary" data-dismiss="modal" type="button">
 					<i class="fas fa-times"></i>
 					Close Project</button>
@@ -403,7 +406,7 @@
 			</div>
 			<div class="container">
 			<div class="row">
-				<div class="col-lg-8 mx-auto">
+				<div class="col-lg-10 mx-auto">
 				<div class="modal-body">
 					<!-- Project Details Go Here -->
 					<h2 class="text-uppercase">Dozen's Bakery</h2>
@@ -417,11 +420,14 @@
 						</a>
 					</div>
 					<img class="img-fluid d-block mx-auto" src="img/portfolio/dozens-bakery.png" alt="dozens">
-					<p>An online storefront for a bakery that sells treats by the dozen. Visitors can browse the site, add and remove treats from their cart, place an order, and view their confirmation/order summary.</p>
-					<ul class="list-inline">
-					<li>Solo Project</li>
-					<li>Technology: JavaScript, React.js, Fetch API, React Router, HTML5/CSS3, Bootstrap 4, PHP, MySQL</li>
-					</ul>
+					<div class="project-overview">
+						<h5>Overview</h5>
+						<p>An online storefront for a bakery that sells treats by the dozen. Visitors can browse the site, add and remove treats from their cart, place an order, and view their confirmation/order summary.</p>
+					</div>
+					<div class="technical-details">
+						<h5>Technical Details</h5>
+						<p>Developed using <strong>JavaScript</strong> with <strong>React.js</strong> for a dynamic front end UI. Applied <strong>React Router</strong> for page routing and <strong>Fetch API</strong> to communicate product and order data with back-end. Utilized <strong>PHP</strong> and a <strong>MySQL</strong> database to retrieve and deliver data to client. Also applied <strong>Bootstrap 4</strong> for a responsive, clean, and fluid user experience.</p>
+					</div>
 					<button class="btn btn-primary" data-dismiss="modal" type="button">
 					<i class="fas fa-times"></i>
 					Close Project</button>
@@ -444,7 +450,7 @@
 			</div>
 			<div class="container">
 			<div class="row">
-				<div class="col-lg-8 mx-auto">
+				<div class="col-lg-10 mx-auto">
 				<div class="modal-body">
 					<!-- Project Details Go Here -->
 					<h2 class="text-uppercase">Dynamic Duo</h2>
@@ -458,11 +464,14 @@
 						</a>
 					</div>
 					<img class="img-fluid d-block mx-auto" src="img/portfolio/match.png" alt="memory match">
-					<p>A memory match card game with 18 randomized face-down cards. Click to flip cards and execute logic to check for matches and mismatches. Match all 9 pairs to win, and track your stats along the way.</p>
-					<ul class="list-inline">
-					<li>Solo Project</li>
-					<li>Technology: JavaScript, jQuery, HTML5/CSS3</li>
-					</ul>
+					<div class="project-overview">
+						<h5>Overview</h5>
+						<p>A <em>Calvin and Hobbes</em> themed memory match card game with 18 randomized face-down cards. Click to flip cards and execute logic to check for matches and mismatches. Match all 9 pairs to win, and track your stats along the way.</p>
+					</div>
+					<div class="technical-details">
+						<h5>Technical Details</h5>
+						<p>Designed with pure <strong>HTML5/CSS3</strong> for structure, styling, and a responsive layout.  Utilized <strong>JavaScript</strong> and <strong>jQuery</strong> for DOM creation, to calculate statistics, and to enable card-revealing functionality.</p>
+					</div>		
 					<button class="btn btn-primary" data-dismiss="modal" type="button">
 					<i class="fas fa-times"></i>
 					Close Project</button>
