fixed display bug due to missing curly brace

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 					</div>
 					<div class="technical-details">
 						<h5>Technical Details</h5>
-						<p>Utilized <strong>JavaScript</strong> with <strong>React.js</strong> to build the appication's front end UI. Also learned <strong>React Router</strong> and <strong>Axios</strong> to ensure proper page routing and to send/retrieve data from endpoints. Back-end built with <strong>PHP</strong> to make queries that create entries in a <strong>MySQL</strong> database. Project features custom <strong>CSS3</strong> and <strong>Bootstrap 4</strong> for a responsive layout.  All code, data, and user-generated content are hosted on an <strong>AWS EC2</strong> server.</p>
+						<p>Utilized <strong>JavaScript</strong> with <strong>React.js</strong> to build the appication's front end UI. Also learned <strong>React Router</strong> and <strong>Axios</strong> to ensure proper page routing and to send/retrieve data from endpoints. Back-end built with <strong>PHP</strong> to make queries that save project content in a <strong>MySQL</strong> database. Project features custom <strong>CSS3</strong> and <strong>Bootstrap 4</strong> for a responsive layout.  All code, data, and user-generated content are hosted on an <strong>AWS EC2</strong> server.</p>
 					</div>
 					<button class="btn btn-primary" data-dismiss="modal" type="button">
 					<i class="fas fa-times"></i>
