replaced resume and github links with personal repo

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					<a href="https://kronostory.com/" target="_blank">
 						<i class="fas fa-link"></i> Live
 					</a>
-					<a href="https://github.com/paulinawebdev/kronostory" target="_blank">
+					<a href="https://github.com/jyang128/kronostory" target="_blank">
 						<i class="fab fa-github"></i> GitHub
 					</a>
 				</div>	
@@ -371,7 +371,7 @@
 						<a href="https://kronostory.com" target="_blank">
 							<i class="fas fa-link"></i> Live
 						</a>
-						<a href="https://github.com/paulinawebdev/kronostory" target="_blank">
+						<a href="https://github.com/jyang128/kronostory" target="_blank">
 							<i class="fab fa-github"></i> GitHub
 						</a>
 					</div>
