--- a/index.html
+++ b/index.html
@@ -195,6 +195,12 @@
 			</div>
 			<div class="col-md-2 col-6">
 				<div class="my-skills-icons">
+					<img src="img/skills/redux.svg" alt="redux">
+				</div>
+				<div class="text-center">Redux.js</div>
+			</div>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
 					<img src="img/skills/html.svg" alt="html">
 				</div>
 				<div class="text-center">HTML5</div>
@@ -270,12 +276,6 @@
 					<img src="img/skills/jquery.svg" alt="jquery">
 				</div>
 				<div class="text-center">jQuery</div>
-			</div>
-			<div class="col-md-2 col-6">
-				<div class="my-skills-icons">
-					<img src="img/skills/ajax.svg" alt="ajax">
-				</div>
-				<div class="text-center">AJAX</div>
 			</div>
 			<div class="col-md-2 col-6">
 				<div class="my-skills-icons">
