--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 				<h4>Dozen's Bakery</h4>
 				<p class="text-muted">An eCommerce shopping cart.</p>
 				<div class="my-icon-row">
-					<a href="https://dozens.jessicakyang.com/" target="_blank">
+					<a href="https://dozens-node.jessicakyang.com/" target="_blank">
 						<i class="fas fa-link"></i> Live
 					</a>
-					<a href="https://github.com/jyang128/dozens-bakery" target="_blank">
+					<a href="https://github.com/jyang128/dozens-bakery-node" target="_blank">
 						<i class="fab fa-github"></i> GitHub
 					</a>
 				</div>	
@@ -375,7 +375,7 @@
 							<i class="fab fa-github"></i> GitHub
 						</a>
 					</div>
-					<img class="img-fluid d-block mx-auto" src="img/portfolio/kronostory-home.png" alt="kronostory">
+					<img class="img-fluid d-block mx-auto" src="img/portfolio/kronostory.png" alt="kronostory">
 					<div class="project-overview">
 						<h5>Overview</h5>
 						<p>KronoStory is a community platform for finding and showcasing creative work and personal endeavors, featuring timelines that make it easy to see the whole process. Users can sign up and log in to share their projects. They can add text and images, update their projects, and delete their content. Visitors to the site can filter content by categories and view user profiles.</p>
@@ -412,21 +412,21 @@
 					<h2 class="text-uppercase">Dozen's Bakery</h2>
 					<p class="item-intro text-muted">An online storefront for a bakery (demo only).</p>
 					<div class="my-icon-row">
-						<a href="https://dozens.jessicakyang.com/" target="_blank">
+						<a href="https://dozens-node.jessicakyang.com/" target="_blank">
 							<i class="fas fa-link"></i> Live
 						</a>
-						<a href="https://github.com/jyang128/dozens-bakery" target="_blank">
+						<a href="https://github.com/jyang128/dozens-bakery-node" target="_blank">
 							<i class="fab fa-github"></i> GitHub
 						</a>
 					</div>
-					<img class="img-fluid d-block mx-auto" src="img/portfolio/dozens-bakery.png" alt="dozens">
+					<img class="img-fluid d-block mx-auto" src="img/portfolio/dozens-node.png" alt="dozens">
 					<div class="project-overview">
 						<h5>Overview</h5>
 						<p>An online storefront for a bakery that sells treats by the dozen. Visitors can browse the site, add and remove treats from their cart, place an order, and view their confirmation/order summary.</p>
 					</div>
 					<div class="technical-details">
 						<h5>Technical Details</h5>
-						<p>Developed using <strong>JavaScript</strong> with <strong>React.js</strong> for a dynamic front end UI. Applied <strong>React Router</strong> for page routing and <strong>Fetch API</strong> to communicate product and order data with back-end. Utilized <strong>PHP</strong> and a <strong>MySQL</strong> database to retrieve and deliver data to client. Also applied <strong>Bootstrap 4</strong> for a responsive, clean, and fluid user experience.</p>
+						<p>Developed using <strong>JavaScript</strong> with <strong>React.js</strong> for a dynamic front end UI. Applied <strong>React Router</strong> for page routing and <strong>Fetch API</strong> to communicate product and order data with back-end. Utilized <strong>Node.js</strong> and a <strong>MySQL</strong> database to retrieve and deliver data to client. Also applied <strong>Bootstrap 4</strong> for a responsive, clean, and fluid user experience.</p>
 					</div>
 					<button class="btn btn-primary" data-dismiss="modal" type="button">
 					<i class="fas fa-times"></i>
