--- a/hbdsteph/index.html
+++ b/hbdsteph/index.html
@@ -25,8 +25,8 @@
 				<div class="col col-lg-8 offset-lg-2 shadow message p-0 mx-3 mx-lg-auto">
 					<img src="hbd27.jpg"/>
 					<div class="text px-5">
-						Happy birthday Steph! I originally wanted to make this page cooler with animations and stuff but I was, and have always been, kinda slow at drawing and ran out of time.  Anywho cheers to 27 and your newfound love for pottery which was the inspiration for this card. Your work is already looking so good, and I'm so glad you've found something that's a therapeutic and creative outlet.</br></br>
-						I am forever-and-ever thankful for your friendship and your presence in my life. Despite the long and uncertain periods of time between each reunion (like the entirety of 2019), I'm always so thrilled to see you again and it makes each visit all the more sweet. Thank you for always being so supportive and encouraging and thoughtful. I hope you have a wonderful day and really feel the loveee!! *BIG HUG*
+						Happy birthday Steph! I originally wanted to make this page cooler with animations and stuff... but I am too slow at drawing and ran out of time.  Anywho cheers to 27 and your newfound love for pottery, which was the inspiration for this card. Your work is already looking so good, and I'm so glad you've found something that's a therapeutic and creative outlet :)</br></br>
+						I am forever-and-ever thankful for your friendship and your presence in my life. With the long and uncertain periods of time between each reunion (like the entirety of 2019), I'm always so thrilled to see you again and it makes each visit all the more sweet! Thank you for always being so supportive and encouraging and thoughtful. I hope you have a wonderful day and really feel the loveee!! *BIG HUG*
 						</br></br>
 						Love, Jess
 					</div>
