--- a/hbdsteph/index.html
+++ b/hbdsteph/index.html
@@ -1,39 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
-	<head>
-
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="author" content="">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="icon" type="image/png" href="bowl.png" />
 	<title>HBD Steph</title>
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 	<link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
-
 	<link href="styles.css" rel="stylesheet">
 
-	</head>
-
-  <body>
-    <div class="container my-3 my-lg-5">
-      <div class="row">
-				<div class="col col-lg-8 offset-lg-2 shadow message p-0 mx-3 mx-lg-auto">
-					<img src="hbd27.jpg"/>
-					<div class="text px-5">
-						Happy birthday Steph! I originally wanted to make this page cooler with animations and stuff... but I am too slow at drawing and ran out of time.  Anywho cheers to 27 and your newfound love for pottery, which was the inspiration for this card. Your work is already looking so good, and I'm so glad you've found something that's a therapeutic and creative outlet :)</br></br>
-						I am forever-and-ever thankful for your friendship and your presence in my life. With the long and uncertain periods of time between each reunion (like the entirety of 2019), I'm always so thrilled to see you again and it makes each visit all the more sweet! Thank you for always being so supportive and encouraging and thoughtful. I hope you have a wonderful day and really feel the loveee!! *BIG HUG*
-						</br></br>
-						Love, Jess
-					</div>
-					<img src="pottery.jpg"/>
+</head>
+<body>
+	<div class="container my-3 my-lg-5">
+		<div class="row">
+			<div class="col col-lg-8 offset-lg-2 shadow message p-0 mx-3 mx-lg-auto">
+				<img src="hbd27.jpg"/>
+				<div class="text px-5">
+					Happy birthday Steph! I originally wanted to make this page cooler with animations and stuff... but I am too slow at drawing and ran out of time.  Anywho cheers to 27 and your newfound love for pottery, which was the inspiration for this card. Your work is already looking so good, and I'm so glad you've found something that's a therapeutic and creative outlet :)</br></br>
+					I am forever-and-ever thankful for your friendship and your presence in my life. With the long and uncertain periods of time between each reunion (like the entirety of 2019), I'm always so thrilled to see you again and it makes each visit all the more sweet! Thank you for always being so supportive and encouraging and thoughtful. I hope you have a wonderful day and really feel the loveee!! *BIG HUG*
+					</br></br>
+					Love, Jess
 				</div>
-      </div>
-    </div>
-  </body>
-
+				<img src="pottery.jpg"/>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
