hide kronostory link, update year in footer

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 				<h4>KronoStory</h4>
 				<p class="text-muted">A platform for passion projects.</p>
 				<div class="my-icon-row">
-					<a href="https://kronostory.com/" target="_blank">
+					<!-- <a href="https://kronostory.com/" target="_blank">
 						<i class="fas fa-link"></i> Live
-					</a>
+					</a> -->
 					<a href="https://github.com/jyang128/kronostory" target="_blank">
 						<i class="fab fa-github"></i> GitHub
 					</a>
@@ -343,7 +343,7 @@
 			</ul>
 			</div>
 			<div class="col-md-8 offset-md-2 py-2">
-				<span class="copyright">Copyright &copy;2019 jessicakyang.com</span>
+				<span class="copyright">Copyright &copy;2020 jessicakyang.com</span>
 			</div>
 		</div>
 		</div>
@@ -368,9 +368,9 @@
 					<h2 class="text-uppercase">KronoStory</h2>
 					<p class="item-intro text-muted">A platform for passion projects.</p>
 					<div class="my-icon-row">
-						<a href="https://kronostory.com" target="_blank">
+						<!-- <a href="https://kronostory.com" target="_blank">
 							<i class="fas fa-link"></i> Live
-						</a>
+						</a> -->
 						<a href="https://github.com/jyang128/kronostory" target="_blank">
 							<i class="fab fa-github"></i> GitHub
 						</a>
