add new tech skill logos

--- a/index.html
+++ b/index.html
@@ -219,6 +219,12 @@
 			</div>
 			<div class="col-md-2 col-6">
 				<div class="my-skills-icons">
+					<img src="img/skills/sass.svg" alt="sass">
+				</div>
+				<div class="text-center">Sass</div>
+			</div>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
 					<img src="img/skills/git.svg" alt="git">
 				</div>
 				<div class="text-center">Git</div>
@@ -231,15 +237,15 @@
 			</div>
 			<div class="col-md-2 col-6">
 				<div class="my-skills-icons">
-					<img src="img/skills/php.svg" alt="php">
-				</div>
-				<div class="text-center">PHP</div>
-			</div>
-			<div class="col-md-2 col-6">
-				<div class="my-skills-icons">
 					<img src="img/skills/node.svg" alt="node">
 				</div>
 				<div class="text-center">Node.js</div>
+			</div>
+			<div class="col-md-2 col-6">
+				<div class="my-skills-icons">
+					<img src="img/skills/postgresql.svg" alt="postgresql.svg">
+				</div>
+				<div class="text-center">PostgreSQL</div>
 			</div>
 			<div class="col-md-2 col-6">
 				<div class="my-skills-icons">
@@ -273,21 +279,15 @@
 			</div>
 			<div class="col-md-2 col-6">
 				<div class="my-skills-icons">
-					<img src="img/skills/jquery.svg" alt="jquery">
+					<img src="img/skills/storybook.svg" alt="storybook.svg">
 				</div>
-				<div class="text-center">jQuery</div>
+				<div class="text-center">Storybook</div>
 			</div>
 			<div class="col-md-2 col-6">
 				<div class="my-skills-icons">
 					<img src="img/skills/vscode.svg" alt="vs code">
 				</div>
 				<div class="text-center">VS Code</div>
-			</div>
-			<div class="col-md-2 col-6">
-				<div class="my-skills-icons">
-					<img src="img/skills/photoshop.svg" alt="photoshop">
-				</div>
-				<div class="text-center">Photoshop</div>
 			</div>
 		</div>
 		</div>
