--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
 			</div>
 			<div class="col-md-2 col-6">
 				<div class="my-skills-icons">
-					<img src="img/skills/chrome.svg" alt="chrome dev tools">
+					<img src="img/skills/figma.svg" alt="figma">
 				</div>
-				<div class="text-center">Chrome Dev Tools</div>
+				<div class="text-center">Figma</div>
 			</div>
 			<div class="col-md-2 col-6">
 				<div class="my-skills-icons">
@@ -285,9 +285,9 @@
 			</div>
 			<div class="col-md-2 col-6">
 				<div class="my-skills-icons">
-					<img src="img/skills/vscode.svg" alt="vs code">
+					<img src="img/skills/jira.svg" alt="jira">
 				</div>
-				<div class="text-center">VS Code</div>
+				<div class="text-center">JIRA</div>
 			</div>
 		</div>
 		</div>
